Port to 1.18 (#171)
* Update to 1.18

A short comment to some changes in build.gradle:
lombok bump is required because of this: https://stackoverflow.com/questions/66801256/java-lang-illegalaccesserror-class-lombok-javac-apt-lombokprocessor-cannot-acce
duplicate strategy is necessary, but i'm not sure why. accesstransformer.cfg appears to be a duplicate...
some gradle files have changed because I started with a fresh mdk like gigaherz suggested in their how2update gist: https://gist.github.com/gigaherz/6fc52ee532f36ec432db62458c1620b5
I also removed the mcmod.info file as it's no longer used by forge

* code cleanup

switched  Stream#collect(Collectors.toList()) to Stream#toList()
added @UtilityClass Annotations were possible
added computeIfAbsent to a call on a map, instead of get, nullcheck and put
used instanceof cast were possible
removed keywords which are added by the compiler
switched !optional.isPresent() to optional.isEmpty

and some more minor changes
and some general code cleanup

* Updated mods.toml

require forge for 1.18 and a secure 1.18 version of forge

* Made ctm runnable in non dev env

java modules require a valid version name and those can't start with MC
The ObfuscationReflectionHelper now uses the srg names and translates those in dev to mapped names. I've now tested ctm in non dev envs

* addressed PR-Review

* remove duplicatesStrategy as it isn't needed anymore

Co-authored-by: agnor99 <kreader100@gmail.com>
Co-authored-by: agnor99 <36055315+agnor99@users.noreply.github.com>