@@ -2,11 +2,10 @@ package team.chisel.ctm.client.model.parsing;
 
 import java.util.Map;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.gson.JsonDeserializationContext;
 import com.google.gson.JsonObject;
 
-import net.minecraft.resources.IResourceManager;
+import net.minecraft.server.packs.resources.ResourceManager;
 import net.minecraftforge.client.model.IModelLoader;
 import team.chisel.ctm.api.model.IModelCTM;
 import team.chisel.ctm.api.model.IModelParser;
@@ -15,7 +14,7 @@ public enum ModelLoaderCTM implements IModelLoader<IModelCTM> {
 
 	INSTANCE;
 
-	private static final Map<Integer, IModelParser> parserVersions = ImmutableMap.of(1, new ModelParserV1());
+	private static final Map<Integer, IModelParser> parserVersions = Map.of(1, new ModelParserV1());
 
 //    @Override
 //    public boolean accepts(ResourceLocation modelLocation) {        
@@ -49,6 +48,7 @@ public enum ModelLoaderCTM implements IModelLoader<IModelCTM> {
 	}
 
 	@Override
-	public void onResourceManagerReload(IResourceManager resourceManager) {
+	public void onResourceManagerReload(ResourceManager resourceManager) {
+
 	}
 }
