@@ -7,7 +7,7 @@ import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 
-import net.minecraft.client.renderer.model.BakedQuad;
+import net.minecraft.client.renderer.block.model.BakedQuad;
 import team.chisel.ctm.api.texture.ITextureContext;
 import team.chisel.ctm.api.util.TextureInfo;
 import team.chisel.ctm.client.texture.type.TextureTypeNormal;
@@ -24,7 +24,7 @@ public class TextureNormal extends AbstractTexture<TextureTypeNormal> {
     @Override
     public List<BakedQuad> transformQuad(BakedQuad quad, ITextureContext context, int quadGoal) {
         if (quadGoal == 4) {
-            return Arrays.stream(makeQuad(quad, context).transformUVs(sprites[0]).subdivide(4)).filter(Objects::nonNull).map(qu -> qu.rebake()).collect(Collectors.toList());
+            return Arrays.stream(makeQuad(quad, context).transformUVs(sprites[0]).subdivide(4)).filter(Objects::nonNull).map(qu -> qu.rebake()).toList();
         }
         return Lists.newArrayList(makeQuad(quad, context).transformUVs(sprites[0]).rebake());
     }
