@@ -13,6 +13,7 @@ import com.google.common.collect.HashMultimap;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Multimap;
 
+import lombok.experimental.UtilityClass;
 import lombok.extern.log4j.Log4j2;
 import net.minecraftforge.fml.ModList;
 import net.minecraftforge.forgespi.language.ModFileScanData;
@@ -23,6 +24,7 @@ import team.chisel.ctm.api.texture.TextureType;
  * Registry for all the different texture types
  */
 @Log4j2
+@UtilityClass
 public class TextureTypeRegistry {
 
     private static Map<String, ITextureType> map = Maps.newHashMap();
@@ -32,35 +34,35 @@ public class TextureTypeRegistry {
         final List<ModFileScanData.AnnotationData> annotations = ModList.get().getAllScanData().stream()
                 .map(ModFileScanData::getAnnotations)
                 .flatMap(Collection::stream)
-                .filter(a -> TextureType.class.getName().equals(a.getAnnotationType().getClassName()))
-                .collect(Collectors.toList());
+                .filter(a -> TextureType.class.getName().equals(a.annotationType().getClassName()))
+                .toList();
         log.debug("Found {} @TextureType annotations from scan", annotations.size());
 
         Multimap<ModFileScanData.AnnotationData, String> annots = HashMultimap.create();        
         for (ModFileScanData.AnnotationData single : annotations) {
-        	annots.put(single, (String) single.getAnnotationData().get("value"));
+        	annots.put(single, (String) single.annotationData().get("value"));
         }
         log.debug("Found {} unique texture types", annots.size());
         
         for (Entry<ModFileScanData.AnnotationData, Collection<String>> data : annots.asMap().entrySet()) {
             ITextureType type;
-            if (data.getKey().getTargetType() == ElementType.FIELD) {
+            if (data.getKey().targetType() == ElementType.FIELD) {
                 try {
-                    Class<?> c = Class.forName(data.getKey().getClassType().getClassName());
-                    Field f = c.getDeclaredField(data.getKey().getMemberName());
+                    Class<?> c = Class.forName(data.getKey().clazz().getClassName());
+                    Field f = c.getDeclaredField(data.getKey().memberName());
                     type = (ITextureType) f.get(null);
                 } catch (Exception e) {
-                    throw new RuntimeException("Exception loading texture type for class: " + data.getKey().getClassType(), e);
+                    throw new RuntimeException("Exception loading texture type for class: " + data.getKey().clazz(), e);
                 }
-            } else if (data.getKey().getTargetType() == ElementType.TYPE) {
+            } else if (data.getKey().targetType() == ElementType.TYPE) {
 	            try {
-	                Class<? extends ITextureType> clazz = (Class<? extends ITextureType>) Class.forName(data.getKey().getClassType().getClassName());
+	                Class<? extends ITextureType> clazz = (Class<? extends ITextureType>) Class.forName(data.getKey().clazz().getClassName());
 	                type = clazz.newInstance();
 	            } catch (Exception e) {
-	                throw new RuntimeException("Exception loading texture type for class: " + data.getKey().getClassType() + " (on member " + data.getKey().getMemberName() + ")", e);
+	                throw new RuntimeException("Exception loading texture type for class: " + data.getKey().clazz() + " (on member " + data.getKey().memberName() + ")", e);
 	            }
             } else {
-            	throw new IllegalArgumentException("@TextureType found on invalid element type: " + data.getKey().getTargetType() + " (" + data.getKey().getClassType() + ")");
+            	throw new IllegalArgumentException("@TextureType found on invalid element type: " + data.getKey().targetType() + " (" + data.getKey().clazz() + ")");
             }
             for (String name : data.getValue()) {
                 log.debug("Registering scanned texture type: {}", name);
