@@ -10,6 +10,18 @@ import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
+import net.minecraft.client.renderer.ItemBlockRenderTypes;
+import net.minecraft.client.resources.model.BakedModel;
+import net.minecraft.client.resources.model.MultiPartBakedModel;
+import net.minecraft.client.resources.model.WeightedBakedModel;
+import net.minecraft.server.packs.resources.ResourceManager;
+import net.minecraft.server.packs.resources.SimplePreparableReloadListener;
+import net.minecraft.server.packs.resources.SimpleReloadableResourceManager;
+import net.minecraft.util.profiling.ProfilerFiller;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.LeavesBlock;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraftforge.fml.util.ObfuscationReflectionHelper;
 import org.apache.commons.lang3.tuple.Pair;
 
 import com.google.common.collect.Maps;
@@ -18,42 +30,30 @@ import com.mojang.datafixers.util.Unit;
 import it.unimi.dsi.fastutil.objects.Object2BooleanMap;
 import it.unimi.dsi.fastutil.objects.Object2BooleanOpenHashMap;
 import lombok.RequiredArgsConstructor;
-import net.minecraft.block.Block;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.LeavesBlock;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.RenderType;
-import net.minecraft.client.renderer.RenderTypeLookup;
-import net.minecraft.client.renderer.model.IBakedModel;
-import net.minecraft.client.renderer.model.MultipartBakedModel;
-import net.minecraft.client.renderer.model.WeightedBakedModel;
-import net.minecraft.client.resources.ReloadListener;
-import net.minecraft.profiler.IProfiler;
-import net.minecraft.resources.IResourceManager;
-import net.minecraft.resources.SimpleReloadableResourceManager;
 import net.minecraftforge.client.event.ParticleFactoryRegisterEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.fml.common.ObfuscationReflectionHelper;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.IRegistryDelegate;
 import team.chisel.ctm.client.model.AbstractCTMBakedModel;
 
-public class CTMPackReloadListener extends ReloadListener<Unit> {
+public class CTMPackReloadListener extends SimplePreparableReloadListener<Unit> {
     
     @SubscribeEvent
     public void onParticleFactoryRegister(ParticleFactoryRegisterEvent event) {
         // Apparently this is the only event that is posted after other resource loaders are registered, but before
         // the reload begins. We must register here to be AFTER model baking.
-        ((SimpleReloadableResourceManager)Minecraft.getInstance().getResourceManager()).addReloadListener(this);
+        ((SimpleReloadableResourceManager)Minecraft.getInstance().getResourceManager()).registerReloadListener(this);
     }
     
     @Override
-    protected Unit prepare(IResourceManager resourceManagerIn, IProfiler profilerIn) {
+    protected Unit prepare(ResourceManager resourceManagerIn, ProfilerFiller profilerIn) {
         return Unit.INSTANCE;
     }
 
     @Override
-    protected void apply(Unit objectIn, IResourceManager resourceManagerIn, IProfiler profilerIn) {
+    protected void apply(Unit objectIn, ResourceManager resourceManagerIn, ProfilerFiller profilerIn) {
         ResourceUtil.invalidateCaches();
         TextureMetadataHandler.INSTANCE.invalidateCaches();
         AbstractCTMBakedModel.invalidateCaches();
@@ -63,16 +63,16 @@ public class CTMPackReloadListener extends ReloadListener<Unit> {
     private static final Map<IRegistryDelegate<Block>, Predicate<RenderType>> blockRenderChecks = Maps.newHashMap();
 
     private void refreshLayerHacks() {
-        blockRenderChecks.forEach((b, p) -> RenderTypeLookup.setRenderLayer(b.get(), p));
+        blockRenderChecks.forEach((b, p) -> ItemBlockRenderTypes.setRenderLayer(b.get(), p));
         blockRenderChecks.clear();
 
         for (Block block : ForgeRegistries.BLOCKS.getValues()) {
-            BlockState state = block.getDefaultState();
-            Predicate<RenderType> predicate = getLayerCheck(state, Minecraft.getInstance().getModelManager().getBlockModelShapes().getModel(state));
+            BlockState state = block.defaultBlockState();
+            Predicate<RenderType> predicate = getLayerCheck(state, Minecraft.getInstance().getModelManager().getBlockModelShaper().getBlockModel(state));
 
             if (predicate != null) {
                 blockRenderChecks.put(block.delegate, getExistingRenderCheck(block));
-                RenderTypeLookup.setRenderLayer(block, predicate);
+                ItemBlockRenderTypes.setRenderLayer(block, predicate);
             }
         }
     }
@@ -80,12 +80,12 @@ public class CTMPackReloadListener extends ReloadListener<Unit> {
     @RequiredArgsConstructor
     private static class CachingLayerCheck implements Predicate<RenderType> {
         
-        static <T> CachingLayerCheck of(BlockState state, Collection<T> rawModels, Function<T, IBakedModel> converter) {
+        static <T> CachingLayerCheck of(BlockState state, Collection<T> rawModels, Function<T, BakedModel> converter) {
             List<AbstractCTMBakedModel> ctmModels = rawModels.stream()
                     .map(converter)
                     .filter(m -> m instanceof AbstractCTMBakedModel)
                     .map(m -> (AbstractCTMBakedModel) m)
-                    .collect(Collectors.toList());
+                    .toList();
             return new CachingLayerCheck(state, ctmModels, ctmModels.size() < rawModels.size());
         }
         
@@ -103,24 +103,24 @@ public class CTMPackReloadListener extends ReloadListener<Unit> {
         }
     }
     
-    private Predicate<RenderType> getLayerCheck(BlockState state, IBakedModel model) {
-        if (model instanceof AbstractCTMBakedModel) {
-            return layer -> ((AbstractCTMBakedModel) model).getModel().canRenderInLayer(state, layer);
+    private Predicate<RenderType> getLayerCheck(BlockState state, BakedModel model) {
+        if (model instanceof AbstractCTMBakedModel ctmModel) {
+            return layer -> ctmModel.getModel().canRenderInLayer(state, layer);
         }
-        if (model instanceof WeightedBakedModel) {
-            return CachingLayerCheck.of(state, ((WeightedBakedModel)model).models, wm -> wm.model);
+        if (model instanceof WeightedBakedModel weightedModel) {
+            return CachingLayerCheck.of(state, weightedModel.list, wm -> wm.getData());
         }
-        if (model instanceof MultipartBakedModel) {
-            return CachingLayerCheck.of(state, ((MultipartBakedModel)model).selectors, Pair::getRight);
+        if (model instanceof MultiPartBakedModel multiPartModel) {
+            return CachingLayerCheck.of(state, multiPartModel.selectors, Pair::getRight);
         }
         return null;
     }
 
-    private static final Field _blockRenderChecks = ObfuscationReflectionHelper.findField(RenderTypeLookup.class, "blockRenderChecks");
+    private static final Field _blockRenderChecks = ObfuscationReflectionHelper.findField(ItemBlockRenderTypes.class, "blockRenderChecks");
     private static final MethodHandle _fancyGraphics;
     static {
         try {
-            _fancyGraphics = MethodHandles.lookup().unreflectGetter(ObfuscationReflectionHelper.findField(RenderTypeLookup.class, "field_228388_c_"));
+            _fancyGraphics = MethodHandles.lookup().unreflectGetter(ObfuscationReflectionHelper.findField(ItemBlockRenderTypes.class, "f_109277_"));
         } catch (IllegalAccessException e) {
             throw new RuntimeException(e);
         }
@@ -138,16 +138,16 @@ public class CTMPackReloadListener extends ReloadListener<Unit> {
         Block block = state.getBlock();
         if (block instanceof LeavesBlock) {
             try {
-                return ((boolean) _fancyGraphics.invokeExact()) ? type == RenderType.getCutoutMipped() : type == RenderType.getSolid();
+                return ((boolean) _fancyGraphics.invokeExact()) ? type == RenderType.cutoutMipped() : type == RenderType.solid();
             } catch (Throwable e) {
                 throw new RuntimeException(e);
             }
         } else {
             java.util.function.Predicate<RenderType> rendertype;
-            synchronized (RenderTypeLookup.class) {
+            synchronized (ItemBlockRenderTypes.class) {
                 rendertype = blockRenderChecks.get(block.delegate);
             }
-            return rendertype != null ? rendertype.test(type) : type == RenderType.getSolid();
+            return rendertype != null ? rendertype.test(type) : type == RenderType.solid();
         }
     }
 }
